--- a/docroot/themes/custom/tower_health/components/_patterns/03-organisms/omw-callout/_omw-callout.scss
+++ b/docroot/themes/custom/tower_health/components/_patterns/03-organisms/omw-callout/_omw-callout.scss
@@ -1,18 +1,15 @@
 .omw-callout {
   @include grid;
   position: relative;
-  background-color: $primary-dark;
-  padding: 2em;
-  border-radius: 8px;
-  margin: 2em 0 3.5em;
   text-align: center;
+  margin-top: 2em;
+  margin-bottom: 2em;
 
   @include breakpoint($bp3) {
     display: flex;
     justify-content: space-between;
     align-items: center;
     text-align: left;
-    margin-right: 12%;
   }
 }
 
@@ -24,6 +21,9 @@
 }
 
 .omw-callout__text {
+  background-color: $primary-dark;
+  padding: 2em 2em 3em 2em;
+  border-radius: 8px;
   color: $white;
   margin-bottom: 1em;
   width: 100%;
@@ -34,25 +34,28 @@
   }
 
   @include breakpoint($bp3) {
-    width: 75%;
+    width: 80%;
     margin-bottom: 0;
+    padding: 2em 6em 2em 2em;
   }
   
-  @include breakpoint($bp5) {
+  @include breakpoint($bp4) {
     width: 90%;
-    margin-bottom: 0;
   }
 }
 
 .omw-callout__button {
   margin: 0 auto;
-  margin-bottom: -3.5em;
+  margin-top: -3em;
 
   @include breakpoint($bp3) {
     position: absolute;
-    right: -12%;
-    width: 45%;
+    right: 2em;
+    width: 30%;
+    top: 2em;
     text-align: right;
     margin-bottom: 0;
+    margin-top: 0;
   }
+
 }
