--- a/docroot/themes/custom/tower_health/components/_patterns/03-organisms/box-links/_box-links.scss
+++ b/docroot/themes/custom/tower_health/components/_patterns/03-organisms/box-links/_box-links.scss
@@ -1,26 +1,7 @@
 .box-links {
   position: relative;
-
-  &::after {
-    content: ' ';
-    background-color: $trust-ltst;
-    position: absolute;
-    top: 10%;
-    bottom: 10%;
-    left: -2em;
-    right: -2em;
-    z-index: -5;
-
-    @include breakpoint($bp3) {
-      top: 15%;
-      bottom: 15%;
-    }
-
-    @include breakpoint("1350px") {
-      left: calc(-1 * (((100vw - 1350px) / 2) + 2em));
-      right: calc(-1 * (((100vw - 1350px) / 2) + 2em));
-    }
-  }
+  background: linear-gradient(to top, transparent, transparent 10%, $trust-ltst 10%, $trust-ltst 90%, transparent 90%, transparent);
+  margin: 4em 0;
 }
 
 .box-links-wrapper {
@@ -28,41 +9,53 @@
   display: flex;
   justify-content: space-between;
   flex-wrap: wrap;
-  padding: 5em 0;
-
-  @include breakpoint($bp3) {
-    padding: 0 5em;
-  }
 }
 
 .box-link {
   width: 100%;
-  margin: 5px;
-  min-height: 450px;
+  margin-bottom: 1em;
+  min-height: 350px;
   position: relative;
+  @include trans;
 
   @include breakpoint($bp3) {
-    width: calc(50% - 10px);
+    width: 48%;
+    min-height: 400px;
   }
-
-  &::after {
-    content: '';
-    position: absolute;
-    height: 1px;
-    border-top: 6px solid $growth;
-    border-radius: 0 3px 3px 0;
-    left: 0;
-    bottom: 4em;
-    width: calc((100vw - 9em));
-
-    @include breakpoint($bp3) {
-      border-top: 6px solid $trust;
-      width: calc((100vw / 2) - 18em);
+  
+  &:hover,
+  &:focus,
+  &:active {
+    
+    .box-link__background {
+      @include trans;
+      transform: scale(1.05); 
+      
+      &::before {
+        background: linear-gradient(to top, $primary-dark, rgba($primary-dark, .6));
+      }
+    }
+    
+    .box-link__cta,
+    .box-link__text {
+      @include trans;
+      opacity: 1;
+      height: auto;
+    }
+    
+    .box-link__text {
+      margin-bottom: 2em;
+    }
+    
+    .box-link__content {
+      @include trans;
+      border-color: $growth;
     }
   }
 }
     
 .box-link__background {
+  @include trans;
   position: absolute;
   top: 0;
   bottom: 0;
@@ -71,62 +64,76 @@
   background-repeat: no-repeat;
   background-size: cover;
   border-radius: 5px;
+  
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-end;
+  padding-bottom: 2em;
+  
+  &::before {
+    content: '';
+    display: block;
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    border-radius: 5px;
+    background: linear-gradient(to top, $primary-dark, rgba($primary-dark, .6));
+  }
+  
+  @include breakpoint($bp3) {
+    &::before {
+      background: linear-gradient(to top, $primary-dark, rgba($primary-dark, .3));      
+    }
+  }
+}
 
-  &:hover,
-  &:focus {
-    transform: scale(1.05);
+.box-link__content {
+  display: flex;
+  flex-direction: column;
+  padding: 2em 0 0 2em;
+  margin-right: 2em;
+  border-bottom: 4px solid $growth;
+  position: relative;
+  
+  @include breakpoint($bp3) {
+    border-color: $trust;
   }
 }
 
 .box-link__title {
-  position: absolute;
-  bottom: 1em;
-  left: 1em;
+  @include adjust-font-size-to($md-heading, 1.25);
   color: $white;
-  max-width: calc(85% - 2em);
-  display: none;
+  margin-top: 0;
+  margin-bottom: .25em;
+}
 
+.box-link__text {
+  color: $white;
+  margin-bottom: 2em;
+  
   @include breakpoint($bp3) {
-    display: block;
-    bottom: 2.5em;
-    left: 2em;
+    @include trans;
+    height: 0;
+    opacity: 0;
+    margin-bottom: 0;
   }
 }
 
-
-.box-link__back {
-  color: $white;
-  padding: 2em;
-  background-color: rgba($primary-dark, 0.9);
-  height: 100%;
-  border-radius: 5px;
-
+.box-link__cta {
+  @include adjust-font-size-to($label, .9);
+  @extend %track-out;
+  color: $growth-med;
+  text-transform: uppercase;
+  font-weight: 600;
+  margin-bottom: .5em;
+  align-self: flex-end;
+  
   @include breakpoint($bp3) {
-    visibility: hidden;
-    box-shadow: 0 2px 8px rgba($black, 0.15);
-  }
-
-  @include breakpoint($bp4) {
-    padding: 4em;
-  }
-
-  h3 {
-    margin-top: 0;
-  }
-
-  p {
-    color: $white;
-  }
-
-  .box-link__text {
-    color: $growth-med;
-    text-transform: uppercase;
-    font-weight: 700;
-    font-size: 1em;
-    letter-spacing: 0.1em;
-    position: absolute;
-    right: 4.5em;
-    bottom: 5em;
+    @include trans;
+    height: 0;
+    opacity: 0;
   }
 }
 
