--- a/docroot/themes/custom/tower_health/components/_patterns/03-organisms/box-links/box-links.twig
+++ b/docroot/themes/custom/tower_health/components/_patterns/03-organisms/box-links/box-links.twig
@@ -2,14 +2,13 @@
   <div class="box-links-wrapper">
     {% for box in boxes %}
       <a class="box-link" href="{{ link.url }}">
-        <div class="box-link__background" style='background-image: linear-gradient(to top, #003056, #003056 25%, #FFFFFF00), url("{{ box.img.src }}");'>
-          <h3 class="box-link__title"><span>{{ box.title }}</span></h3>
-          <div class="box-link__back">
-            <h3 class="box-link__title"><span>{{ box.title }}</span></h3>
+        <div class="box-link__background" style='background-image: url("{{ box.img.src }}");'>
+          <div class="box-link__content">
+            <h3 class="box-link__title">{{ box.title }}</h3>
             <div class="box-link__text">
               {{ box.text }}
             </div>
-            <span class="box-link__text">{{ box.link.text }}</span>
+            <span class="box-link__cta">{{ box.link.text }}</span>
           </div>
         </div>
       </a>
