--- a/docroot/themes/custom/tower_health/components/_patterns/03-organisms/text-teaser-banner/text-teaser-banner.twig
+++ b/docroot/themes/custom/tower_health/components/_patterns/03-organisms/text-teaser-banner/text-teaser-banner.twig
@@ -1,7 +1,9 @@
 <div class="text-teaser">
-  <h2 class="text-teaser__title">{{ title }}</h2>
-  <div class="text-teaser__text">
-    <p>{{ text }}</p>
+  <div class="text-teaser__content">
+    <h2 class="text-teaser__title">{{ title }}</h2>
+    <div class="text-teaser__text">
+      {{ text }}
+    </div>
   </div>
   <div class="text-teaser__button">
     <a class="button button-primary" href="{{ button.url }}">{{ button.text }}</a>
