--- a/docroot/themes/custom/tower_health/components/_patterns/03-organisms/text-teaser-banner/_text-teaser-banner.scss
+++ b/docroot/themes/custom/tower_health/components/_patterns/03-organisms/text-teaser-banner/_text-teaser-banner.scss
@@ -2,32 +2,58 @@
   @include grid;
   display: flex;
   flex-wrap: wrap;
-  margin: 2em 0;
-}
-
-.text-teaser__title {
-  width: 100%;
-}
-
-.text-teaser__text {
-
+  margin-top: 6em;
+  margin-bottom: 4em;
+  
   @include breakpoint($bp3) {
-    width: 60%;
+    align-items: flex-end;
   }
+}
 
-  p {
-    margin-top: 0;
-
-    @include breakpoint($bp3) {
-      margin: 0;
+.text-teaser__content {
+  position: relative;
+  
+  @include breakpoint($bp3) {
+    padding-top: 3em;
+    width: 60%;
+    border-top: 6px solid $trust-ltst;
+    
+    &::before {
+      content: '';
+      position: absolute;
+      height: 1px;
+      border-top: 6px solid $trust-ltst;
+      left: -2em;
+      width: 2em;
+      top: -6px;
+      
+      @include breakpoint($bp5) {
+        width: calc(1.5em + (100vw - 1350px));
+        left: calc(-1.5em - (100vw - 1350px));
+      }
     }
   }
 }
 
+.text-teaser__title {
+  margin-top: 0;
+  margin-bottom: .25em;
+}
+
+.text-teaser__text {
+
+  p {
+    margin: 0;
+  }
+}
+
 .text-teaser__button {
+  margin-top: 1em;
 
   @include breakpoint($bp3) {
-    padding-left: 1em;
-    width: 40%;
+    display: flex;
+    justify-content: flex-end;
+    width: 30%;
+    margin-left: auto;
   }
 }
