--- a/docroot/themes/custom/tower_health/components/_patterns/02-molecules/menus/section-menu/section-menu.twig
+++ b/docroot/themes/custom/tower_health/components/_patterns/02-molecules/menus/section-menu/section-menu.twig
@@ -8,7 +8,7 @@
         icon_blockname: "toggle-expand",
         icon_name: "bars",
       } %}
-      <span class="toggle-expand__text">Section Menu</span>
+      <span class="toggle-expand__text--section">Section Menu</span>
     </span>
     <span class="toggle-expand__close">
       {% include "@atoms/04-images/icons/_icon.twig" with {
@@ -16,7 +16,7 @@
         icon_blockname: "toggle-close",
         icon_name: "close",
       } %}
-      <span class="toggle-expand__text">Close</span>
+      <span class="toggle-expand__text--section">Close Section Menu</span>
     </span>
   </button>
   <nav class="section-nav__container">
