--- a/docroot/themes/custom/tower_health/templates/layout/region--header.html.twig
+++ b/docroot/themes/custom/tower_health/templates/layout/region--header.html.twig
@@ -16,7 +16,7 @@
 {% extends "@organisms/site/site-header/site-header.twig" %}
 {% block logo %}
   {% include "@atoms/04-images/00-image/figure.twig" with {
-    img_src: directory ~ "/components/images/TowerHealth_H.svg",
+    img_src: "/" ~ directory ~ "/components/images/TowerHealth_H.svg",
     img_alt: "Tower Health",
     img_url: header_logo_link_url|default('/'),
     image_figure_base_class: 'header-logo'
