--- a/docroot/themes/custom/tower_health/components/_patterns/03-organisms/teasers/provider-teaser/_provider-teaser.scss
+++ b/docroot/themes/custom/tower_health/components/_patterns/03-organisms/teasers/provider-teaser/_provider-teaser.scss
@@ -1,80 +1,189 @@
 .teaser {
   border: 4px solid $trust-ltst;
   border-radius: 5px;
-  padding: 2em 3em 2em 18em;
-  margin: 50px 0 50px 4em;
+  padding: 1em;
+  margin: 100px 0 2em;
   position: relative;
-  width: 100%;
+  text-align: center;
+  
+  @include breakpoint($bp2) {
+    text-align: left;
+  }
+  
+  @include breakpoint($bp3) {
+    margin: 2em 0 2em 150px;
+    padding: 2em 3em 2em 5em;
+  }
+  
+  @include breakpoint($bp4) {
+    padding: 2em 3em 2em 6em;
+  }
+}
 
-  .provider-teaser__image {
+.provider-teaser__image-container {
+  display: inline-block;
+  position: relative;
+  margin: -100px auto 1em;
+  
+  &::after {
     position: absolute;
-    left: -25px;
-    top: -50px;
-    height: 320px;
-    width: 320px;
-  }
-
-  .callout {
-    font-size: 1.5em;
-    padding-bottom: 0.5em;
-    color: $primary-dark;
-    font-weight: 700;
+    top: -10px;
+    left: -10px;
     display: block;
-    background-color: $white;
-
-    @include breakpoint($bp2) {
-      font-size: 2em;
-      position: absolute;
-      top: -15px;
-      padding: 0 0.5em;
-      margin-left: -0.5em;
-    }
+    content: '';
+    height: 205px;
+    width: 205px;
+    background-color: $growth;
+    border-radius: 50%;
+    z-index: 1;
   }
-
-  .teaser__content {
-    display: flex;
-    justify-content: space-between;
-    flex-wrap: wrap;
-
-    @include breakpoint($bp3) {
-      flex-wrap: nowrap;
-    }
-
-    div {
-      margin-bottom: 1em;
-
-      @include breakpoint($bp2) {
-        margin-bottom: 0;
-      }
-    }
-
-    .teaser-label {
-      display: block;
-      color: $primary-dark;
-      text-transform: uppercase;
-      font-weight: 600;
-      font-size: 0.85em;
-
-      &:last-of-type {
-        margin-top: 1em;
-      }
-    }
-
-    .teaser__button {
-      width: 100%;
-
-      @include breakpoint($bp3) {
-        width: auto;
-        padding-top: 0;
-      }
-
-      .icon-button {
-        opacity: 1;
-        max-width: 200px;
-      }
+  
+  @include breakpoint($bp2) {
+    margin: -125px 0 0;
+    float: right;
+  }
+  
+  @include breakpoint($bp3) {
+    position: absolute;
+    margin: 0;
+    left: -140px;
+    top: -0.5em;
+  }
+  
+  @include breakpoint($bp4) {
+    &::after {
+      height: 230px;
+      width: 230px;
     }
   }
 }
+
+.provider-teaser__image {
+  position: relative;
+  height: 200px;
+  width: 200px;
+  overflow: hidden;
+  border-radius: 150px;
+  z-index: 3;
+  
+  img {
+    width: 100%;
+  }
+  
+  @include breakpoint($bp4) {
+    height: 225px;
+    width: 225px;
+  }
+}
+
+.teaser__provider-name {
+  @include adjust-font-size-to($md-heading, 1.25);
+  color: $primary-dark;
+  font-weight: 700;
+  display: block;
+  background-color: $white;
+  margin-top: 0;
+  margin-bottom: .25em;
+  
+  a:link,
+  a:visited {
+    color: $primary-dark;
+    text-decoration: none;
+  }
+  
+  a:active,
+  a:hover,
+  a:focus {
+    text-decoration: underline;
+  }
+
+  @include breakpoint($bp2) {
+    position: relative;
+    margin-top: 1em;
+    width: calc(100% - 225px);
+  }
+  
+  @include breakpoint($bp3) {
+    display: inline-block;
+    width: auto;
+    padding: .5em;
+    margin-top: 0;
+    margin-bottom: -2.25em;
+    top: -2.25em;
+  }
+}
+
+.teaser__content {
+  text-align: left;
+  
+  @include breakpoint($bp2) {
+    clear: both;
+  }
+  
+  @include breakpoint($bp3) {
+    display: flex;
+    flex-wrap: nowrap;
+    align-items: center;
+    position: relative;
+    top: -3em;
+    margin-bottom: -3em;
+  }
+}
+
+
+.teaser__content__info {
+  @include adjust-font-size-to($sm-text, .9);
+  display: flex;
+  justify-content: space-between;
+  flex-wrap: wrap;
+  
+  @include breakpoint($bp3) {
+    clear: none;
+    padding-left: 1em;
+  }
+}
+
+.teaser__section {
+  margin-bottom: .5em;
+  
+  @include breakpoint($bp1) {
+    width: 48%;
+  }
+  
+  @include breakpoint($bp3) {
+    margin-bottom: .25em;
+  }
+}
+
+.teaser__section--small {
+  width: 48%;
+}
+
+.teaser__button {
+  margin: 1em auto -4em;
+
+  @include breakpoint($bp3) {
+    width: auto;
+    padding-top: 0;
+    margin: 0;
+    margin-left: auto;
+  }
+
+  .icon-button {
+    opacity: 1;
+  }
+}
+
+.teaser-label {
+  @include adjust-font-size-to($sm-text, .9);
+  @extend %track-out;
+  font-weight: 600;
+  display: block;
+  color: $primary-dark;
+  text-transform: uppercase;
+  margin-bottom: .25em;
+}
+
 
 // Animations
 
