--- a/docroot/themes/custom/tower_health/components/_patterns/_print.scss
+++ b/docroot/themes/custom/tower_health/components/_patterns/_print.scss
@@ -103,7 +103,8 @@
     .cta-banner-list__background,
     .cta-banner-list__buttons,
     .icon-button,
-    .homepage-hero__image {
+    .homepage-hero__image,
+    .teaser {
       opacity: 1;
       transition: none;
       animation: none;
