begin restructure of filters based on form section

--- a/docroot/themes/custom/tower_health/components/_patterns/01-atoms/05-forms/select/_select.scss
+++ b/docroot/themes/custom/tower_health/components/_patterns/01-atoms/05-forms/select/_select.scss
@@ -24,6 +24,7 @@
   @extend %input;
   outline: none;
   width: 100%;
+  background-color: $white;
 
   :focus {
     outline: none;
@@ -48,6 +49,8 @@
     -webkit-appearance: none;
     -moz-appearance: none;
     appearance: none;
+    
+    background-color: $white;
 
     &:focus {
       border-color: $gray;
