--- a/docroot/themes/custom/tower_health/components/_patterns/03-organisms/basic-header/basic-header.twig
+++ b/docroot/themes/custom/tower_health/components/_patterns/03-organisms/basic-header/basic-header.twig
@@ -1,4 +1,4 @@
-<header class='basic-header {% if header.style == 'secondary' %}basic-header--secondary{% endif %}'>
+<header class='basic-header {% if header.style == 'secondary' %}basic-header--secondary{% endif %}{% if header.style == 'list' %}basic-header--list{% endif %}'>
   <div class="basic-header__container">
     {% if header.breadcrumb %}
     {% include "@molecules/menus/breadcrumbs/breadcrumbs.twig" with {
@@ -15,6 +15,14 @@
       
       {% if header.lede %}
       <span class="basic-header__lede">{{ header.lede}}</span>
+      {% endif %}
+      
+      {% if header.form %}
+        {% include "@organisms/listings/listing-search/listing-search.twig" with {
+          label: header.form.label,
+          placeholder: header.form.placeholder,
+          button: header.form.button
+        } %}
       {% endif %}
     </div>
   </div>
