--- a/docroot/themes/custom/tower_health/components/_patterns/03-organisms/listings/listing-filter/listing-filter.twig
+++ b/docroot/themes/custom/tower_health/components/_patterns/03-organisms/listings/listing-filter/listing-filter.twig
@@ -4,29 +4,14 @@
       <span>Filter</span>
       <a href="/">Clear Filters</a>
     </div>
-    <div class="filter__filters">
-      <div class="filter--top">
-        {% for item in filters %}
-          <div>
-            <label>{{ item.label }}</label>
-            {% if item.type == "select" %}
-              <select>
-                <option default>Any</option>
-              </select>
-            {% else %}
-              <input type="text" placeholder="{{ item.placeholder }}" />
-            {% endif %}
-          </div>
-        {% endfor %}
-      </div>
-      {% if filter_radios %}
-        <div class="filter--bottom">
-          <label>{{ filter_radios.label }}</label>
-          {% for item in filter_radios.items %}
-            <div><input type="radio" value="{{ item.value }}">{{ item.label }}</div>
-          {% endfor %}
-        </div>
-      {% endif %}
+    <div class="filter__items">
+      {% for item in form_sections %}
+        {% include "@organisms/form-section/form-section.twig" with {
+          section_heading_level: null,
+          section_heading: null,
+          section_items: item.section_items
+        } %}
+      {% endfor %}
     </div>
   </div>
 </div>
