--- a/docroot/themes/custom/tower_health/components/_patterns/03-organisms/listings/listing-search/listing-search.twig
+++ b/docroot/themes/custom/tower_health/components/_patterns/03-organisms/listings/listing-search/listing-search.twig
@@ -1,7 +1,7 @@
-<div class="listing-search">
-  <div>
+<form class="listing-search">
+  <div class="listing-search__input">
     <label>{{ label }}</label>
     <input type="text" placeholder="{{ placeholder }}" />
   </div>
   <a href="/" class="button button-primary">{{ button }}</a>
-</div>
+</form>
