--- a/docroot/themes/custom/tower_health/components/_patterns/01-atoms/05-forms/_forms.scss
+++ b/docroot/themes/custom/tower_health/components/_patterns/01-atoms/05-forms/_forms.scss
@@ -11,6 +11,7 @@
   font-size: 16px;
   margin-bottom: 1em;
   font-weight: 300;
+  background-color: $white;
 
   @include breakpoint($bp3) {
     height: 70px;
