--- a/docroot/themes/custom/tower_health/components/_patterns/03-organisms/basic-header/_basic-header.scss
+++ b/docroot/themes/custom/tower_health/components/_patterns/03-organisms/basic-header/_basic-header.scss
@@ -1,5 +1,9 @@
 .basic-header {
   margin: 1em 0 2em;
+  
+  &.basic-header--list {
+    margin-bottom: 0;
+  }
 }
 
 .basic-header--secondary {
@@ -41,6 +45,28 @@
     
     &::before {
       border-color: $trust;
+    }
+  }
+  
+  .basic-header--list & {
+    text-align: center;
+    border-bottom: 0;
+    
+    &::before {
+      display: none;
+      visibility: hidden;
+    }
+    
+    .basic-header__title {
+      @include adjust-font-size-to($xxxl-heading, 1.5);
+      text-transform: uppercase;
+      margin-left: auto;
+      margin-right: auto;
+    }
+    
+    .basic-header__lede {
+      margin-left: auto;
+      margin-right: auto;
     }
   }
 }
