--- a/docroot/themes/custom/tower_health/components/_patterns/03-organisms/listings/listing-filter/_listing-filter.scss
+++ b/docroot/themes/custom/tower_health/components/_patterns/03-organisms/listings/listing-filter/_listing-filter.scss
@@ -1,111 +1,69 @@
 .filter {
+  @include grid;
+  margin-bottom: 2em;
+}
+
+.filter-grid-wrapper {
+  display: flex;
+  flex-wrap: wrap;
+  align-items: flex-start;
+  justify-content: space-between;
   background-color: $trust-ltst;
-  padding: 2em;
-  margin-bottom: 6em;
+  padding: 1em 2em;
+  border-radius: 8px 0 0 8px;
 
-  @include breakpoint($bp5) {
-    margin-left: calc(((100% - 1500px) / 2) + 2em);
-    border-radius: 10px 0 0 10px;
+  @include breakpoint($bp3) {
+    flex-wrap: nowrap;
+  }
+}
+
+.filter__labels {
+  @include adjust-font-size-to($label, .9);
+  width: 100%;
+  margin-bottom: 1em;
+
+  @include breakpoint($bp2) {
+    width: auto;
+    flex: 1 0 auto;
+    margin-right: 1.5em;
+    margin-top: 8px;
   }
 
-  .filter-grid-wrapper {
-    @include grid;
-    display: flex;
-    flex-wrap: wrap;
-    align-items: flex-start;
-    justify-content: space-between;
+  span {
+    @extend %track-out;
+    display: block;
+    text-transform: uppercase;
+    font-weight: 700;
+  }
+}
+
+.filter__items {
+  
+  @include breakpoint($bp2) {
+    flex: 0 1 auto;
+  }
+  
+  .form-item__select,
+  input[type="text"] {
+    height: 50px;
+  }
+  
+  .form-section {
     margin: 0;
-    padding: 0;
-
-    @include breakpoint($bp2) {
-      flex-wrap: wrap;
-    }
   }
-
-  .filter__labels {
-    font-size: 0.8em;
-    width: 100%;
-    margin-bottom: 1em;
-
-    @include breakpoint($bp2) {
-      width: auto;
-    }
-
-    span {
-      font-size: 1.25em;
-      display: block;
-      text-transform: uppercase;
-      font-weight: 700;
-    }
+  
+  .form-section__item {
+    margin-bottom: .5em;
   }
-
-  .filter__filters {
-    width: 100%;
-
-    @include breakpoint($bp2) {
-      width: 80%;
+  
+  @include breakpoint($bp3) {
+    .form-item--inline,
+    .form-item--radio__item {
+      display: inline-block;
     }
-
-    .filter--top {
-
-      > div {
-
-        @include breakpoint($bp3) {
-          display: inline-block;
-          width: 19%;
-        }
-
-        label {
-          font-weight: 600;
-        }
-
-        select, input {
-          @extend %input;
-          height: 50px;
-          width: 100%;
-          border: 2px solid $primary-dark;
-          border-radius: 5px;
-
-          @include breakpoint($bp3) {
-            width: 90%;
-          }
-        }
-      }
-    }
-
-    .filter--bottom {
-
-      div {
-
-        @include breakpoint($bp4) {
-          display: inline-block;
-        }
-      }
-
-      label {
-        font-weight: 600;
-
-        @include breakpoint($bp4) {
-          display: inline-block;
-        }
-      }
-
-      input {
-        margin-right: 0.5em;
-
-        @include breakpoint($bp3) {
-          display: inline-block;
-          margin-left: 1em;
-        }
-
-        &:first-of-type {
-          margin-left: 0;
-
-          @include breakpoint($bp4) {
-            margin-left: 1em;
-          }
-        }
-      }
+    
+    .form-item--inline {
+      margin-left: .5em;
     }
   }
 }
