--- a/docroot/themes/custom/tower_health/components/_patterns/05-pages/listing/find-a-provider.twig
+++ b/docroot/themes/custom/tower_health/components/_patterns/05-pages/listing/find-a-provider.twig
@@ -6,14 +6,8 @@
   {% block page_header %}
     <div class="header__wrapper js-section-animation">
       {% include "@organisms/basic-header/basic-header.twig" with {
-        breadcrumb: header.breadcrumb,
-        class: header.class,
-        } %}
-      {% include "@organisms/listings/listing-search/listing-search.twig" with {
-        label: search.label,
-        placeholder: search.placeholder,
-        button: search.button,
-        } %}
+        breadcrumb: header.breadcrumb
+      } %}
       {% include "@organisms/listings/listing-filter/listing-filter.twig"  with {
         filters: filters,
         filter_radios: filter_radios
