modify filters a bit and update find location listing

--- a/docroot/themes/custom/tower_health/components/_patterns/01-atoms/01-links/link/_link.scss
+++ b/docroot/themes/custom/tower_health/components/_patterns/01-atoms/01-links/link/_link.scss
@@ -4,11 +4,16 @@
   &:active,
   &:hover,
   &:focus {
-    color: $growth-aa;
+    color: $primary-dark;
     text-decoration: underline;
   }
 }
 
 .link {
   @include link;
+}
+
+.link--small {
+  @include adjust-font-size-to($crumb, .7);
+  font-style: italic;
 }
