--- a/docroot/themes/custom/tower_health/components/_patterns/02-molecules/menus/_menu-item.twig
+++ b/docroot/themes/custom/tower_health/components/_patterns/02-molecules/menus/_menu-item.twig
@@ -21,6 +21,10 @@
   {% set item_modifiers = item_modifiers|merge([item.entity.field_utility_link_type.value]) %}
 {% endif %}
 
+{% if item.entity.field_main_link_type.value %}
+  {% set item_modifiers = item_modifiers|merge([item.entity.field_main_link_type.value]) %}
+{% endif %}
+
 {% embed "@atoms/03-lists/_list-item.twig" with {
   "list_item_label": item_label,
   "li_base_class": item_base_class|default(menu_class ~ '__item'),
