implement chosen and modify it in a way to move the tags beneath the input

--- a/docroot/themes/custom/tower_health/components/_patterns/01-atoms/05-forms/select/_select.scss
+++ b/docroot/themes/custom/tower_health/components/_patterns/01-atoms/05-forms/select/_select.scss
@@ -11,7 +11,7 @@
     content: " ";
     position: absolute;
     top: 42%;
-    right: 1em;
+    right: .65em;
     z-index: 2;
 
     /* These hacks make the select behind the arrow clickable in some browsers */
