--- a/docroot/themes/custom/tower_health/components/_patterns/03-organisms/listings/listing-filter/_listing-filter.scss
+++ b/docroot/themes/custom/tower_health/components/_patterns/03-organisms/listings/listing-filter/_listing-filter.scss
@@ -62,8 +62,23 @@
   }
   
   .form-item__select,
-  input[type="text"] {
+  input[type="text"],
+  .chosen-container-single .chosen-single,
+  .chosen-container-multi .chosen-choices {
     height: 50px;
+  }
+  
+  .chosen-container-single .chosen-single,
+  .chosen-container-multi .chosen-choices {
+    padding: .65em 1.35em 0 1em;
+  }
+  
+  .form-item__dropdown::after {
+    top: 1.15em;
+  }
+  
+  .chosen-container-multi .chosen-drop {
+    top: 50px;
   }
   
   .form-section {
