attach proper libraries, make list filter toggle js, style list filters

--- a/docroot/themes/custom/tower_health/components/_patterns/01-atoms/05-forms/chosen/chosen.twig
+++ b/docroot/themes/custom/tower_health/components/_patterns/01-atoms/05-forms/chosen/chosen.twig
@@ -1,4 +1,4 @@
-{{ attach_library('tower_health/autocomplete') }}
+{{ attach_library('tower_health/chosen') }}
 <select class="chosen-select">
   <option>option 1</option>
   <option>option 2</option>
