--- a/docroot/themes/custom/tower_health/components/_patterns/03-organisms/listings/listing-filter/_listing-filter.scss
+++ b/docroot/themes/custom/tower_health/components/_patterns/03-organisms/listings/listing-filter/_listing-filter.scss
@@ -3,6 +3,43 @@
   margin-bottom: 2em;
 }
 
+.filter__toggle {
+  background-color: rgba($trust-ltst, .6);
+  color: $primary-dark;
+  border-radius: 8px;
+  text-align: center;
+  display: block;
+  border: 0;
+  appearance: none;
+  width: 100%;
+  padding: .5em 1em;
+  text-transform: uppercase;
+  
+  &:active,
+  &:hover,
+  &:focus {
+    background-color: $trust-aa;
+    color: $white;
+  }
+  
+  .filter__toggle--close {
+    display: none;
+    visibility: hidden;
+  }
+  
+  .is-active & {
+    .filter__toggle--close {
+      display: inline;
+      visibility: visible;
+    }
+    
+    .filter__toggle--open {
+      display: none;
+      visibility: hidden;
+    }
+  }
+}
+
 .filter-grid-wrapper {
   position: relative;
   display: flex;
@@ -13,8 +50,18 @@
   padding: 1em 2em;
   border-radius: 8px 0 0 8px;
   width: 100%;
+  
+  display: none;
+  visibility: hidden;
+  
+  .is-active & {
+    display: flex;
+    visibility: visible;
+  }
 
   @include breakpoint($bp3) {
+    display: flex;
+    visibility: visible;
     flex-wrap: nowrap;
   }
   
