listing filters js fix

--- a/docroot/themes/custom/tower_health/components/_patterns/03-organisms/listings/listing-filter/_listing-filter.scss
+++ b/docroot/themes/custom/tower_health/components/_patterns/03-organisms/listings/listing-filter/_listing-filter.scss
@@ -38,6 +38,11 @@
       visibility: hidden;
     }
   }
+  
+  @include breakpoint($bp3) {
+    display: none;
+    visibility: hidden;
+  }
 }
 
 .filter-grid-wrapper {
