--- a/docroot/themes/custom/tower_health/components/_patterns/03-organisms/listings/listing-search/_listing-search.scss
+++ b/docroot/themes/custom/tower_health/components/_patterns/03-organisms/listings/listing-search/_listing-search.scss
@@ -15,10 +15,15 @@
     width: 100%;
     display: flex;
     align-items: center;
+    justify-content: center;
 
     @include breakpoint($bp2) {
+      width: 200px;
+      margin-left: 1em;
+    }
+    
+    @include breakpoint($bp3) {
       width: 230px;
-      margin-left: 2em;
     }
   }
 }
